# komadreja

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audio_recording_plan.md  build_android.sh  clean_build.sh  create_sample.py  resources.qrc
build_android/: CMakeCache.txt  Makefile  android-appKoalaKlone-deployment-settings.json  appKoalaKlone  appkoalaklone_qmltyperegistrations.cpp  cmake_install.cmake
build_android/.qt/: .qmlls.build.ini  QtDeploySupport.cmake  QtDeployTargets.cmake  appKoalaKlone_qml.cmake  appKoalaKlone_res.cmake
build_android/.qt/qml_imports/: appKoalaKlone_conf.cmake  appKoalaKlone_conf.rsp
build_android/.qt/rcc/: appKoalaKlone_raw_qml_0.qrc  qmake_Koala.qrc  qrc_appKoalaKlone_raw_qml_0.cpp  qrc_qmake_Koala.cpp  resources.qrc
build_android/.rcc/qmlcache/: all_aotstats.aotstatslist  appKoalaKlone_qml_loader_file_list.rsp  appKoalaKlone_qmlcache_loader.cpp  module_appKoalaKlone.aotstatslist
build_android/Koala/: appKoalaKlone_qml_module_dir_map.qrc  qmldir
build_android/Koala/qml/: main.qml
build_android/android-build/: AndroidManifest.xml  appKoalaKlone.d  gradle.properties  local.properties
build_android/appKoalaKlone_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_android/meta_types/: appKoalaKlone_json_file_list.txt  appKoalaKlone_json_file_list.txt.timestamp  qt6appkoalaklone_metatypes.json
build_android/qmltypes/: appKoalaKlone_foreign_types.txt
qml/: main.qml
qml/screens/: SampleScreen.qml
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/models/: PadModel.cpp  PadModel.h  config.h
(+13 files in other folders)
